Updated templates to separate page headers and articles; fixed home page styles to not bleed into subpages

--- a/style.css
+++ b/style.css
@@ -9,60 +9,17 @@ Version: v0.0.0
 body > .container a { -webkit-transition: .15s ease-in-out; transition: .15s ease-in-out; }
 hr { color: #8adfd4; border-color: #8adfd4 -moz-use-text-color transparent; }
 
-/* Home */
-body.body-home { background: #fff url('static/img/gradient-blue.png') repeat-x top left; }
-body.body-home:after {
-	display: block;
-	content: '';
-	width: 419px;
-	height: 427px;
-	background: url('static/img/home-compass.png') center center no-repeat;
-	position: absolute;
-	top: 60px;
-	right: 0;
-	z-index: 1;
-}
-body.body-home > .container { position: relative; z-index: 2; }
-
-#home { }
-#home #home-content { font-family: 'TrocchiRegular', Georgia, serif; font-size: 30px; line-height: 45px; color: #1e5b53; }
-#home #home-content a { color: #fff; text-decoration: underline; }
-#home #home-content a:hover { color: #efefef; }
-
-/* Home features */
-#home-features {}
-#home-features .home-feature {}
-#home-features .home-feature .home-feature-icon { float: left; }
-#home-features .home-feature .home-feature-textwrap { 
-	margin-left: 40px; 
-	min-height: 170px; 
-	padding-right: 15px;
-	border-right: 1px solid #8adfd4;
-}
-#home-features .home-feature:last-child .home-feature-textwrap {
-	padding-right: 0; border-right: 0;
-}
-#home-features .home-feature .home-feature-textwrap h3 { 
-	margin-top: 0; 
-	margin-bottom: 5px;
-	line-height: 26px; 
-	font-size: 20px; 
-	font-weight: 300; 
-	color: #1e5b53;
-}
-
-
 /* Header */
 #header { border-bottom: 1px solid #8adfd4; padding-bottom: 8px; margin-bottom: .5em; margin-top:20px; }
-#header h1 { line-height: 32px; font-size: 24px; margin: 5px 0; font-weight: 500; }
-#header h1 a { color: #fff; }
-#header h1 a:hover { color: #efefef; }
+#header h1 { line-height: 40px; font-size: 30px; margin: 5px 0; font-weight: 300; }
+#header h1 a { color: #000; }
+#header h1 a:hover { }
 
 /* Header menu */
 #header-menu-wrap {}
 #header-menu-wrap #header-menu {}
-#header-menu-wrap #header-menu li a { color: #fff; text-decoration: underline; }
-#header-menu-wrap #header-menu li a:hover { color: #efefef; }
+#header-menu-wrap #header-menu li a { color: #000; }
+#header-menu-wrap #header-menu li a:hover { }
 
 /* Below the Fold */
 #below-the-fold { }
@@ -81,6 +38,7 @@ body.body-home > .container { position: relative; z-index: 2; }
 
 #below-the-fold-cta a {
 	display: inline-block;
+	text-align: center;
 	font-size: 20px;
 	line-height: 20px;
 	font-weight: bold;
@@ -107,4 +65,52 @@ body.body-home > .container { position: relative; z-index: 2; }
 	background: #1cb9a5;
 	transition: none;
 	-webkit-transition: none;
+}
+
+
+/* Home */
+body.body-home { background: #fff url('static/img/gradient-blue.png') repeat-x top left; }
+body.body-home:after {
+	display: block;
+	content: '';
+	width: 419px;
+	height: 427px;
+	background: url('static/img/home-compass.png') center center no-repeat;
+	position: absolute;
+	top: 60px;
+	right: 0;
+	z-index: 1;
+}
+body.body-home > .container { position: relative; z-index: 2; }
+body.body-home #header h1 { line-height: 32px; font-size: 24px; margin: 5px 0; font-weight: 500; }
+body.body-home #header h1 a { color: #fff; }
+body.body-home #header h1 a:hover { color: #efefef; }
+body.body-home #header-menu-wrap #header-menu li a { color: #fff; text-decoration: underline; }
+body.body-home #header-menu-wrap #header-menu li a:hover { color: #efefef; }
+
+#home { }
+#home #home-content { font-family: 'TrocchiRegular', Georgia, serif; font-size: 30px; line-height: 45px; color: #1e5b53; }
+#home #home-content a { color: #fff; text-decoration: underline; }
+#home #home-content a:hover { color: #efefef; }
+
+/* Home features */
+#home-features {}
+#home-features .home-feature {}
+#home-features .home-feature .home-feature-icon { float: left; }
+#home-features .home-feature .home-feature-textwrap { 
+	margin-left: 40px; 
+	min-height: 170px; 
+	padding-right: 15px;
+	border-right: 1px solid #8adfd4;
+}
+#home-features .home-feature:last-child .home-feature-textwrap {
+	padding-right: 0; border-right: 0;
+}
+#home-features .home-feature .home-feature-textwrap h3 { 
+	margin-top: 0; 
+	margin-bottom: 5px;
+	line-height: 26px; 
+	font-size: 20px; 
+	font-weight: 300; 
+	color: #1e5b53;
 }
